umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_0010_C(#N)C(C#N)_C(=C(_N=_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: ConsecutiveBonds
    message: Consecutive bonds at position 31
opensmiles:
  success: false
  error:
    error_type: ConsecutiveBonds
    message: Consecutive bonds at position 31
